# CogMAS-TDD

./: .gitignore  ARCHITECTURE_DRAFT.md  EXPERIMENT_PLAN.md  LDB_MIGRATION_MAPPING.md  PROJECT_STATUS.md  README.md  _debug_api.py  _debug_api2.py  _debug_api3.py  _smoke_test.py  _test_evalplus.py  _test_output.txt  _tmp_eval_humaneval.py  _tmp_humaneval_samples.jsonl  _tmp_siliconflow_test.py  _tmp_validate_humaneval_eval.py  aggregate_results.py  analyze_bigcodebench_comparison.py  analyze_refcode_quality.py  analyze_results.py  benchmark_inputs.py  create_bigcodebench_manifest.py  df_contents.txt  evaluate_humaneval.py  experiment_profiles.py  generate_cisq_python_benchmark_subset.py  generate_experiment_manifests.py  generate_humaneval_plus_manifest.py  main.py  pyproject.toml  run_all_experiments.sh  run_benchmark.py  run_comparison.sh  run_ours_full.sh  run_parallel.py  run_remaining_experiments.sh  run_rerun_after_fix.sh  state.py  test_deepseek.py
.claude/: settings.local.json
agents/: __init__.py  code_review_node.py  evaluation_node.py  green_node.py  l2_refactor_node.py  l3_refactor_node.py  ldb_debug_node.py  rar4is_node.py  red_node.py  test_runner_node.py
benchmark_manifests/: _parallel_humaneval_plus_full_a_20260521_182128.json  _parallel_humaneval_plus_full_a_20260522_023337.json  _parallel_humaneval_plus_full_b_20260521_182128.json  _parallel_humaneval_plus_full_b_20260522_023337.json  _parallel_humaneval_plus_ours_missing_51_a_20260521_200558.json  _parallel_humaneval_plus_ours_missing_51_b_20260521_200558.json  _resume_b_20260522_035257.json  (+11 more)
(+388 files in other folders)
